fixing overflow x bug

--- a/public/project-gallery.css
+++ b/public/project-gallery.css
@@ -156,7 +156,7 @@ p {
   padding-bottom: var(--spacing-xl);
   margin-top: var(--spacing-md);
   box-sizing: border-box;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 .container {
